# golem-cli

./: Cargo.toml  README.md  operations.json
src/: golem.rs  main.rs
src/contract/: golem-token-interface.json
