[package]
name = "golem-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
web3 = "0.17.0"
dotenv = "0.15.0"
secp256k1 = "0.20.3"
clap = { version = "2.33.3", features = ["yaml"] }
serde = "1.0.127"
serde_json = "1.0.66"
serde_derive = "1.0.127"
futures = "0.3.16"
rand = "0.8.4"